2004-09-07  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: CreateFromSignedFile now throw the COMException
	if the specified file isn't signed (before this was done by 
	AuthenticodeDeformatter). More details are available on failure.

2004-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Added new Equals(Object). Moved [Serializable]
	so it's compiled by all profiles. Added missing MonoTODO.
	* X509ContentType.cs: Added new (from 1.2) Pkcs12 enum member. Added
	missing [Serializable] attribute.
	* X509KeyStorageFlags.cs: Specified all flags values. Added missing
	[Serializable] attribute.

2004-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Fixed NET_2_0 directives.
	* X509ContentType.cs: New enum in Fx 2.0.
	* X509KeyStorageFlags.cs: New flags in Fx 2.0.

2003-12-15  Sebastien Pouliot  <spouliot@videotron.ca>

	* X509Certificate.cs: Removed old (commented) Authenticode stuff.
	Added new stuff for 1.2 (stub).

2003-10-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* X509Certificate.cs: Implements CreateFromSignedFile using
	Authenticode related classes.

2003-06-02  Sebastien Pouliot  <spouliot@videotron.ca>

	* X509Certificate.cs: Implements X509Certificate(IntPtr)
	constructor for compatibility with CryptoAPI.

2003-04-23  Sebastien Pouliot  <spouliot@videotron.ca>

	* X509Certificate.cs: Fixed issues for null certificate 
	(special case where object exists without any certificate)
	which made PublisherTest fails.

2003-03-15  Sebastien Pouliot  <spouliot@videotron.ca>

	* X509Certificate.cs: Now use Mono.Security.X509.X509Certificate.

2003-02-08  Sebastien Pouliot  <spouliot@videotron.ca>

	* X509Certificate.cs: Changes to refer Mono.Security (for ASN1)

2002-12-27  Sebastien Pouliot  <spouliot@videotron.ca>

	* ASN1.cs: New. Updated ASN1 classes for X509Certificate that can
	now be reused for other tools (like Cert2Spc). Classes are marked